--- a/contrast.css
+++ b/contrast.css
@@ -18,10 +18,13 @@ form{
 input[type="text"],input[type="email"],input[type="date"],input[type="time"]{
     width: 50%;
 }
+h2{
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
 @media screen and (max-width: 420px) {
     h2{
-        margin-top: 20%;
-        margin-bottom: 20%;
+        margin-top: 30%;
+        margin-bottom: 30%;
     }
 }
-
