--- a/style.css
+++ b/style.css
@@ -135,8 +135,9 @@ video{
 .leiras{
     text-align: justify;
 }
-
-
+figure{
+    border-radius: 10%;
+}
 textarea{
     width: 50em;
     height: 25em;
